--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,6 +9,10 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+.btn.btn-outline-success{
+ margin-right: 10px;
+ margin-left: 20px;
+}
 .box-main {
   background: rgba(0, 0, 0, 0.9);
   width: 50%;
